--- a/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
+++ b/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Bus\" />
-    <Folder Include="Commands\" />
-    <Folder Include="Events\" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
