--- a/MicroRabbit/MicroRabbit.Banking.Api/Properties/launchSettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.Api/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10723",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:16103",
+      "sslPort": 44323
     }
   },
   "profiles": {
@@ -20,7 +20,7 @@
     "MicroRabbit.Banking.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
