--- a/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BankingDbConnection": "Server=GEORGE_PETRU\\SQL2019;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BankingDbConnection": "Server=GEORGE_PETRU\\SQL2019;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TransferDbConnection": "Server=GEORGE_PETRU\\SQL2019;Database=TransferDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
