--- a/MicroRabbit/Microrabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/Microrabbit.Transfer.Api/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=GEORGE_PETRU\\SQL2019;Database=TransferDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BankingDbConnection": "Server=GEORGE_PETRU\\SQL2019;Database=BankingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
